# cpp-api-design-workshop

01-api-design/: CMakeLists.txt  api.h  user.cpp
02-interoperability/: CMakeLists.txt  library.c  library.h  toolkit.cpp  toolkit.h  useclib.py  usecpplib.py  usetoolkit.py  wrapper.cpp  wrapper.h
03-memory-ownership/: CMakeLists.txt  app.cpp  toolkit.cpp  toolkit.h
